k8s/auction-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auction
  template:
    metadata:
      labels:
        app: auction
    spec:
      containers:
        - name: auction
          image: <YOUR_ECR_REPO>/auction:latest
          ports:
            - containerPort: 5003
