k8s/products-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: capstone-ecr/products:latest
          ports:
            - containerPort: 5001
