k8s/users-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: <YOUR_ECR_REPO>/users:latest
          ports:
            - containerPort: 5000
