k8s/products-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: products-svc
  namespace: ecommerce
spec:
  selector:
    app: products
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
