k8s/users-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: ecommerce
spec:
  selector:
    app: users
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
