k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-svc
                port:
                  number: 5000
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: products-svc
                port:
                  number: 5001
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cart-svc
                port:
                  number: 5002
          - path: /auctions
            pathType: Prefix
            backend:
              service:
                name: auction-svc
                port:
                  number: 5003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
